[gd_scene load_steps=3 format=3 uid="uid://cwx44qpnwm6e2"]

[ext_resource type="Script" path="res://scenes/godot-version-item/godot-version-item.gd" id="1_oshmt"]
[ext_resource type="Texture2D" uid="uid://wop6qk8dkl40" path="res://icon.svg" id="2_h232o"]

[node name="GodotVersionItem" type="ColorRect"]
custom_minimum_size = Vector2(0, 110)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 0.5)
script = ExtResource("1_oshmt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
color = Color(1, 1, 1, 0)

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/ColorRect"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_h232o")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="GodotVersionNameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Godot 4.2"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
alignment = 2

[node name="MoveUpButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "^"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="GodotPathLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "C:\\Program Files\\Godot 4\\Godot_v4.0.2-stable_win64.exe"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MoveUpButton" to="." method="_on_move_up_button_pressed"]
